# splunk-operator-app-deployer

./: .releaserc  Dockerfile  README.md  deploy.py  entrypoint.sh  index.yaml  pyproject.toml
.github/workflows/: cd-ghcr.io-chart.yaml  cd-ghcr.io.yaml  cd-releases-chart.yaml  ci-main.yaml  update-tags.yaml
charts/splunk-operator-app-deployer/: Chart.yaml  values.yaml
charts/splunk-operator-app-deployer/templates/: _helpers.tpl  job.yaml
example/: ta.yaml  url.yaml
examples/: url.yaml
workflows/: ci-main.yaml
