[tool.poetry]
name = "splunk-operator-app-deployer"
version = "1.1.3"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
